fix dark mode modal issues

--- a/client/src/assets/styles/theme.css
+++ b/client/src/assets/styles/theme.css
@@ -212,3 +212,7 @@
     --desktop-toolbar-background: var(--bg-control);
     --toolbar-text: #FFFFFF;
   }
+
+:root[data-theme="dark"] .form-select {
+  --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23E5E7EB' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+}
